// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Alt 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Alt
    </span>
  </div>
</div>
`;

exports[`should render ArrowDown 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

.emotion-2 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  font-variation-settings: 'FILL' 1;
  font-family: 'Material Symbols Rounded';
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        
      </span>
    </span>
  </div>
</div>
`;

exports[`should render ArrowLeft 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

.emotion-2 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  font-variation-settings: 'FILL' 1;
  font-family: 'Material Symbols Rounded';
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        
      </span>
    </span>
  </div>
</div>
`;

exports[`should render ArrowRight 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

.emotion-2 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  font-variation-settings: 'FILL' 1;
  font-family: 'Material Symbols Rounded';
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        
      </span>
    </span>
  </div>
</div>
`;

exports[`should render ArrowUp 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

.emotion-2 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  font-variation-settings: 'FILL' 1;
  font-family: 'Material Symbols Rounded';
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      <span
        aria-hidden="true"
        class="emotion-2 emotion-3"
      >
        
      </span>
    </span>
  </div>
</div>
`;

exports[`should render Click 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      click
    </span>
  </div>
</div>
`;

exports[`should render Command 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      ⌘
    </span>
  </div>
</div>
`;

exports[`should render Control 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Ctrl
    </span>
  </div>
</div>
`;

exports[`should render Option 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      ⌥
    </span>
  </div>
</div>
`;

exports[`should render a default text if no keys match 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Ctrl
    </span>
    <span>
      +
    </span>
    <span
      class="emotion-0 emotion-1"
    >
      click
    </span>
  </div>
</div>
`;

exports[`should render multiple keys 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

.emotion-6 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  font-variation-settings: 'FILL' 1;
  font-family: 'Material Symbols Rounded';
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-10 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  font-variation-settings: 'FILL' 1;
  font-family: 'Material Symbols Rounded';
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="sw-px-1 emotion-0 emotion-1"
    >
      Use
    </span>
    <span
      class="emotion-0 emotion-1"
    >
      Ctrl
    </span>
    <span>
      +
    </span>
    <span
      class="emotion-0 emotion-1"
    >
      <span
        aria-hidden="true"
        class="emotion-6 emotion-7"
      >
        
      </span>
    </span>
    <span
      class="emotion-0 emotion-1"
    >
      <span
        aria-hidden="true"
        class="emotion-10 emotion-11"
      >
        
      </span>
    </span>
  </div>
</div>
`;

exports[`should render multiple keys with non-key symbols 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  color: var( --echoes-color-text-on-color-inverse);
  background-color: var(--echoes-color-background-ghost-neutral-active);
}

.emotion-4 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  font-variation-settings: 'FILL' 1;
  font-family: 'Material Symbols Rounded';
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-8 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  font-size: calc(1em + 4px);
  font-style: normal;
  font-weight: normal;
  height: calc(2em - 16px);
  line-height: calc(2em - 16px);
  text-align: center;
  vertical-align: bottom;
  width: calc(2em - 16px);
  font-variation-settings: 'FILL' 1;
  font-family: 'Material Symbols Rounded';
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

<div>
  <div
    class="sw-flex sw-gap-1"
    role="group"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Ctrl
    </span>
    <span>
      +
    </span>
    <span
      class="emotion-0 emotion-1"
    >
      <span
        aria-hidden="true"
        class="emotion-4 emotion-5"
      >
        
      </span>
    </span>
    <span
      class="emotion-0 emotion-1"
    >
      <span
        aria-hidden="true"
        class="emotion-8 emotion-9"
      >
        
      </span>
    </span>
  </div>
</div>
`;
